--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ body
 #searchBox input[type="text"], #searchBox input[type="submit"]
 {
     font-size: 17pt;
-    color: #61f3a6;
+    color: #377736;
     background-color: #ffffff;
     border: solid 1px #eaeaea;
     font-family: 'Josefin Slab', serif;
