--- a/css/arkamis.css
+++ b/css/arkamis.css
@@ -1,14 +1,17 @@
+
 @import url(http://fonts.googleapis.com/css?family=Antic+Slab);
 
-html,body {
-  height:100%;
+html, body 
+{
+  height: 100%;
+  font-family: 'Antic Slab', serif;
 }
 
 .wrap h1 
 {
   font-family: 'Antic Slab', serif;
-  font-size:80px;
-  color:#3162a2;
+  font-size: 80px;
+  color: #3162a2;
 }
 
 
@@ -17,62 +20,62 @@ html,body {
 {
   margin: 0 auto;
   width: 100%;
-  min-height: 400px;
-  background-color:#f2f5f8;
-  overflow:hidden;
+  min-height: 500px;
+  background-color: #f2f5f8;
+  overflow: hidden;
 }
 .wrap-no-background 
 {
   margin: 0 auto;
   width: 100%;
-  background-color:#ffffff;
-  color:#c6ccd2;
-  overflow:hidden;
+  background-color: #ffffff;
+  color: #c6ccd2;
+  overflow: hidden;
 }
 
 .wrap a 
 {
-  color:#efefef;
-  text-decoration:none;
+  color: #efefef;
+  text-decoration: none;
 }
 
 .v-center 
 {
-  margin-top:7%;
+  margin-top: 7%;
 }
   
 .wrap h1 
 {
   font-family: 'Antic Slab', serif;
-  font-size:55px;
-  color:#3162a2;
+  font-size: 55px;
+  color: #3162a2;
 }
 
 
 .wrap-no-background h1 
 {
   font-family: 'Antic Slab', serif;
-  font-size:40px;
-  color:#3162a2;
+  font-size: 40px;
+  color: #3162a2;
 }
 .wrap-no-background h2 
 {
   font-family: 'Antic Slab', serif;
-  font-size:40px;
-  color:#db7560;
+  font-size: 40px;
+  color: #db7560;
 }
 
 
-.wrap-no-background p
+#searchResults
 {
 	font-size: 1.5em;
 	color: #65abd0;
 }
-.wrap-no-background p strong
+strong
 {
 	color: #db7560;
 }
-.wrap-no-background p em
+em
 {
 	color: #3162a2;
 	font-style: normal;
