--- a/css/arkamis.css
+++ b/css/arkamis.css
@@ -89,7 +89,7 @@ ul.nav.navbar-nav.navbar-pills > li > a:hover
 }
 .nav.navbar-nav > li > a:hover
 {
-    color: #ffff00;
+    color: #d9c26c;
 }
 
 
@@ -100,7 +100,7 @@ ul.nav.navbar-nav.navbar-pills > li > a:hover
 
 .nav .navbar-nav .navbar-right li a:hover
 {
-    color: #ffff00;
+    color: #d9c26c;
 }
 
 
